--- a/src/app/views/events/events.component.html
+++ b/src/app/views/events/events.component.html
@@ -137,14 +137,13 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <fieldset class="form-group">
+                    <fieldset class="form-group">
                         <ng-select
                         class="bootstrap"
                         placeholder="Choose Tag for your Event"
-                        [options]="countries"
-                        [multiple]="true"   
-                        [(ngModel)]="selectedCountries"></ng-select>
-                      </fieldset> -->
+                        [options]="tags"
+                        [multiple]="true"></ng-select>
+                      </fieldset>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" (click)="hide()">Close</button>
