add search pipe to events and tags + deleted some useless component

--- a/src/app/home/contact/contact.component.html
+++ b/src/app/home/contact/contact.component.html
@@ -1,1 +1,17 @@
-<p>contact works!</p>
+<div class="contact-container">
+    <div class="contact-us">
+        <p id="contact-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptatibus odio ipsum sit voluptate
+            illum perferendis ullam quasi minima, voluptatum itaque distinctio a et. Ipsa reprehenderit dolorum
+            laboriosam sapiente ab!
+        </p>
+    </div>
+    <form action="" class="contact-form">
+        <input class="contact-input" type="text" placeholder="Name">
+        <input class="contact-input" type="email" placeholder="E-mail">
+        <input class="contact-input" id="contact-subject" type="text" placeholder="Subject">
+        <textarea class="contact-input" placeholder="Message.." rows="5" cols="50"></textarea>
+        <a href="#" class="contact-btn">contact Us ! </a>
+
+    </form>
+</div>
