--- a/src/app/views/events/events.component.html
+++ b/src/app/views/events/events.component.html
@@ -39,13 +39,15 @@
                                 [ngClass]="{'is-invalid': submitted && eventForm.controls.startDate.errors, 'is-valid': submitted && !eventForm.controls.startDate.errors}">
                         </div>
                         <div class="col-sm-3">
-                            <timepicker [(ngModel)]="startTime"  [hourStep]="hstep" [min]="minStartTime"
-                            [minuteStep]="mstep" [showMeridian]="ismeridian" [readonlyInput]="!isEnabled" formControlName="startTime"
-                            [ngClass]="{'is-invalid': submitted && eventForm.controls.startTime.errors, 'is-valid': submitted && !eventForm.controls.startTime.errors}">
-                        </timepicker>
+                            <timepicker [(ngModel)]="startTime" [hourStep]="hstep" [min]="minStartTime"
+                                [minuteStep]="mstep" [showMeridian]="ismeridian" [readonlyInput]="!isEnabled"
+                                formControlName="startTime"
+                                [ngClass]="{'is-invalid': submitted && eventForm.controls.startTime.errors, 'is-valid': submitted && !eventForm.controls.startTime.errors}">
+                            </timepicker>
                         </div>
                         <div class="invalid-feedback d-block">
-                            <div *ngIf="submitted && eventForm.controls.startDate.hasError('required') && eventForm.controls.startTime.hasError('required')">
+                            <div
+                                *ngIf="submitted && eventForm.controls.startDate.hasError('required') && eventForm.controls.startTime.hasError('required')">
                                 Event start time is required.
                             </div>
                         </div>
@@ -58,13 +60,14 @@
                                 [ngClass]="{'is-invalid': submitted && eventForm.controls.endDate.errors, 'is-valid': submitted && !eventForm.controls.endDate.errors}">
                         </div>
                         <div class="col-sm-3">
-                            <timepicker [(ngModel)]="endTime" [hourStep]="hstep" [min]="minEndTime"
-                            [minuteStep]="mstep" [showMeridian]="ismeridian" [readonlyInput]="!isEnabled" formControlName="endTime"
-                            [ngClass]="{'is-invalid': submitted && eventForm.controls.endTime.errors, 'is-valid': submitted && !eventForm.controls.endTime.errors}">
-                        </timepicker>
+                            <timepicker [(ngModel)]="endTime" [hourStep]="hstep" [min]="minEndTime" [minuteStep]="mstep"
+                                [showMeridian]="ismeridian" [readonlyInput]="!isEnabled" formControlName="endTime"
+                                [ngClass]="{'is-invalid': submitted && eventForm.controls.endTime.errors, 'is-valid': submitted && !eventForm.controls.endTime.errors}">
+                            </timepicker>
                         </div>
                         <div class="invalid-feedback d-block">
-                            <div *ngIf="submitted && eventForm.controls.endDate.hasError('required') && eventForm.controls.endTime.hasError('required')">
+                            <div
+                                *ngIf="submitted && eventForm.controls.endDate.hasError('required') && eventForm.controls.endTime.hasError('required')">
                                 Event end time is required.
                             </div>
                         </div>
@@ -128,8 +131,9 @@
                     </div>
                     <div class="form-group">
                         <label>Photo :</label>
-                        <input type="file" (change)="onFileSelect($event)" placeholder="Upload photo for your event" accept="image/*"
-                        [ngClass]="{'is-invalid': submitted && eventForm.controls.photo.errors, 'is-valid': submitted && !eventForm.controls.photo.errors}">
+                        <input type="file" (change)="onFileSelect($event)" placeholder="Upload photo for your event"
+                            accept="image/*"
+                            [ngClass]="{'is-invalid': submitted && eventForm.controls.photo.errors, 'is-valid': submitted && !eventForm.controls.photo.errors}">
                         <div class="invalid-feedback d-block">
                             <div *ngIf="submitted && eventForm.controls.photo.hasError('required') && !file">
                                 Photo is required.
@@ -138,7 +142,8 @@
                                 Photo format must be type image.
                             </div>
                         </div>
-                        <img *ngIf="eventForm.value.photo" [src]="eventForm.value.photo" style="width: 50px; height :50px;">
+                        <img *ngIf="eventForm.value.photo" [src]="eventForm.value.photo"
+                            style="width: 50px; height :50px;">
                     </div>
                     <!-- <fieldset class="form-group">
                         <ng-select
@@ -172,9 +177,9 @@
                         <div class="col-12">
                             <button class="btn btn-success col-1.5 float-right" data-toggle="modal"
                                 (click)="showAdd()"><i class="fa fa-plus"></i> Add event</button>
-                            <!-- <input type="search" class="form-control col-3" placeholder="Search product by name"  [(ngModel)]="searchText"> -->
                         </div>
                     </div>
+                    <input type="search" class="form-control" placeholder="Search event" [(ngModel)]="searchEvent">
                     <table class="table table-striped table-hover">
                         <thead>
                             <tr>
@@ -182,16 +187,20 @@
                                 <th scope="col">Event name</th>
                                 <th scope="col">Description</th>
                                 <th scope="col">Event Time</th>
+                                <th scope="col">Event type</th>
+                                <th scope="col">Price</th>
                                 <th scope="col">Photo</th>
                                 <th scope="col">Actions</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr class="" *ngFor="let event of listEvents ;let i=index">
+                            <tr class="" *ngFor="let event of listEvents | searchpipe:searchEvent ;let i=index">
                                 <td>{{i+1}}</td>
                                 <td>{{event.eventName}}</td>
                                 <td>{{event.eventDescription}}</td>
                                 <td>{{event.startDate | date: 'MMM d, y'}}</td>
+                                <td>{{event.eventType}}</td>
+                                <td>{{event.price | currency : 'TND'}}</td>
                                 <td><img [src]="event.photo" width="50px" height="50px" alt=""></td>
                                 <td>
                                     <button type="button" class="btn btn-warning" data-toggle="modal"
