--- a/src/app/views/tags/tags.component.html
+++ b/src/app/views/tags/tags.component.html
@@ -55,9 +55,19 @@
                         <div class="col-12">
                             <button class="btn btn-success col-1.5 float-right" data-toggle="modal"
                                 (click)="showAdd()"><i class="fa fa-plus"></i> Add tag</button>
-                            <!-- <input type="search" class="form-control col-3" placeholder="Search product by name"  [(ngModel)]="searchText"> -->
+                            
                         </div>
                     </div>
+                    <div class="row mb-3">
+                        <div class="col-md-4 offset-md-8">
+                          <div class="input-group">
+                            <div class="input-group-prepend">
+                              <span class="input-group-text"><i class="fa fa-search"></i></span>
+                            </div>
+                            <input type="search" class="form-control" placeholder="Search tag"  [(ngModel)]="searchText">
+                          </div>
+                        </div>
+                      </div>
                     <table class="table table-striped table-hover">
                         <thead>
                             <tr>
@@ -68,7 +78,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr class="" *ngFor="let tag of listTagsTodo ;let i=index">
+                            <tr class="" *ngFor="let tag of listTagsTodo | searchpipe: searchText ;let i=index">
                                 <td>{{i+1}}</td>
                                 <td>{{tag.title}}</td>
                                 <td>{{tag.description}}</td>
