--- a/src/app/views/events/events.component.html
+++ b/src/app/views/events/events.component.html
@@ -39,13 +39,15 @@
                                 [ngClass]="{'is-invalid': submitted && eventForm.controls.startDate.errors, 'is-valid': submitted && !eventForm.controls.startDate.errors}">
                         </div>
                         <div class="col-sm-3">
-                            <timepicker [(ngModel)]="startTime"  [hourStep]="hstep" [min]="minStartTime"
-                            [minuteStep]="mstep" [showMeridian]="ismeridian" [readonlyInput]="!isEnabled" formControlName="startTime"
-                            [ngClass]="{'is-invalid': submitted && eventForm.controls.startTime.errors, 'is-valid': submitted && !eventForm.controls.startTime.errors}">
-                        </timepicker>
+                            <timepicker [(ngModel)]="startTime" [hourStep]="hstep" [min]="minStartTime"
+                                [minuteStep]="mstep" [showMeridian]="ismeridian" [readonlyInput]="!isEnabled"
+                                formControlName="startTime"
+                                [ngClass]="{'is-invalid': submitted && eventForm.controls.startTime.errors, 'is-valid': submitted && !eventForm.controls.startTime.errors}">
+                            </timepicker>
                         </div>
                         <div class="invalid-feedback d-block">
-                            <div *ngIf="submitted && eventForm.controls.startDate.hasError('required') && eventForm.controls.startTime.hasError('required')">
+                            <div
+                                *ngIf="submitted && eventForm.controls.startDate.hasError('required') && eventForm.controls.startTime.hasError('required')">
                                 Event start time is required.
                             </div>
                         </div>
@@ -58,13 +60,14 @@
                                 [ngClass]="{'is-invalid': submitted && eventForm.controls.endDate.errors, 'is-valid': submitted && !eventForm.controls.endDate.errors}">
                         </div>
                         <div class="col-sm-3">
-                            <timepicker [(ngModel)]="endTime" [hourStep]="hstep" [min]="minEndTime"
-                            [minuteStep]="mstep" [showMeridian]="ismeridian" [readonlyInput]="!isEnabled" formControlName="endTime"
-                            [ngClass]="{'is-invalid': submitted && eventForm.controls.endTime.errors, 'is-valid': submitted && !eventForm.controls.endTime.errors}">
-                        </timepicker>
+                            <timepicker [(ngModel)]="endTime" [hourStep]="hstep" [min]="minEndTime" [minuteStep]="mstep"
+                                [showMeridian]="ismeridian" [readonlyInput]="!isEnabled" formControlName="endTime"
+                                [ngClass]="{'is-invalid': submitted && eventForm.controls.endTime.errors, 'is-valid': submitted && !eventForm.controls.endTime.errors}">
+                            </timepicker>
                         </div>
                         <div class="invalid-feedback d-block">
-                            <div *ngIf="submitted && eventForm.controls.endDate.hasError('required') && eventForm.controls.endTime.hasError('required')">
+                            <div
+                                *ngIf="submitted && eventForm.controls.endDate.hasError('required') && eventForm.controls.endTime.hasError('required')">
                                 Event end time is required.
                             </div>
                         </div>
@@ -128,8 +131,9 @@
                     </div>
                     <div class="form-group">
                         <label>Photo :</label>
-                        <input type="file" (change)="onFileSelect($event)" placeholder="Upload photo for your event" accept="image/*"
-                        [ngClass]="{'is-invalid': submitted && eventForm.controls.photo.errors, 'is-valid': submitted && !eventForm.controls.photo.errors}">
+                        <input type="file" (change)="onFileSelect($event)" placeholder="Upload photo for your event"
+                            accept="image/*"
+                            [ngClass]="{'is-invalid': submitted && eventForm.controls.photo.errors, 'is-valid': submitted && !eventForm.controls.photo.errors}">
                         <div class="invalid-feedback d-block">
                             <div *ngIf="submitted && eventForm.controls.photo.hasError('required') && !file">
                                 Photo is required.
@@ -138,15 +142,13 @@
                                 Photo format must be type image.
                             </div>
                         </div>
-                        <img *ngIf="eventForm.value.photo" [src]="eventForm.value.photo" style="width: 50px; height :50px;">
+                        <img *ngIf="eventForm.value.photo" [src]="eventForm.value.photo"
+                            style="width: 50px; height :50px;">
                     </div>
                     <fieldset class="form-group">
-                        <ng-select
-                        class="bootstrap"
-                        placeholder="Choose Tag for your Event"
-                        [options]="tags"
-                        [multiple]="true"></ng-select>
-                      </fieldset>
+                        <ng-select class="bootstrap" placeholder="Choose Tag for your Event" [options]="tags"
+                            [multiple]="true" ></ng-select>
+                    </fieldset>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" (click)="hide()">Close</button>
