--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -182,10 +182,10 @@
       <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle (click)="false">
         <img src="assets/img/avatars/avatar.png" class="img-avatar" alt="admin@bootstrapmaster.com"/>
       </a>
-      <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
+      <ul class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
         <div class="dropdown-header text-center"><strong>Account</strong></div>
-        <a class="dropdown-item" (click)="logout()"><i class="fa fa-lock"></i> Logout</a>
-      </div>
+        <li class="dropdown-item" (click)="logout()" style="cursor:pointer"><i class="fa icon-logout"></i> Logout</li>
+      </ul>
     </li>
   </ul>
 </app-header>
