--- a/src/app/views/company/company.component.html
+++ b/src/app/views/company/company.component.html
@@ -76,12 +76,28 @@
           </div>
         </div>
         <div class="form-group row">
+          <label>Photo :</label>
+          <input type="file" (change)="upload($event)" placeholder="Upload your compnay logo"
+              accept="image/*"
+              [ngClass]="{'is-invalid': submitted && companyForm.controls.photo.errors, 'is-valid': submitted && !companyForm.controls.photo.errors}">
+          <div class="invalid-feedback d-block">
+              <div *ngIf="submitted && companyForm.controls.photo.hasError('required') && !file">
+                  Photo is required.
+              </div>
+              <div *ngIf="submitted && companyForm.controls.photo.hasError('required') && file">
+                  Photo format must be type image.
+              </div>
+          </div>
+          <img *ngIf="companyForm.value.photo" [src]="companyForm.value.photo"
+              style="width: 50px; height :50px;">
+      </div>
+        <!-- <div class="form-group row">
           <label for="uploadPhoto">Upload your compnay logo</label>
           <div class="col-md-9">
             <input type="file"(change)="upload($event)">
 
           </div>
-        </div>
+        </div> -->
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" (click)="hide()">Close</button>
           <button type="button" class="btn btn-primary" (click)="updateCompany()" *ngIf="showUpdateButton">Save
@@ -125,7 +141,7 @@
               <tr class="" *ngFor="let company of company ; let i=index">
                 <td>{{i+1}}</td>
                 <td>{{ company.companyName }}</td>
-                <td>{{ company.photo }}</td>
+                <td><img [src]="company.photo" width="50px" height="50px" alt=""></td>
                 <td>{{ company.companyDescription }}</td>
                 <td>{{ company.email }}</td>
                 <td>{{ company.role }}</td>
