--- a/src/app/views/events/events.component.html
+++ b/src/app/views/events/events.component.html
@@ -146,16 +146,10 @@
                             style="width: 50px; height :50px;">
                     </div>
                     <fieldset class="form-group" *ngIf="tags.length">
-                        <ng-select class="bootstrap" placeholder="Choose Tag for your Event"   [options]="tags" 
-                            [multiple]="true" >
+                        <ng-select class="bootstrap" placeholder="Choose Tag for your Event" formControlName="tags"   [options]="tags" 
+                            [multiple]="true" (change)="addSelectedTag($event)">
                         </ng-select>
                      </fieldset>
-                    <!-- <fieldset class="form-group">
-                    <ng-select [multiple]="true">
-                        <ng-option *ngFor="let tag of listTags" [value]="tag.title">{{tag.title}}</ng-option>
-                      
-                    </ng-select>
-                    </fieldset> -->
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" (click)="hide()">Close</button>
@@ -203,7 +197,7 @@
                                 <td>{{event.eventDescription}}</td>
                                 <td>{{event.startDate | date: 'MMM d, y'}}</td>
                                 <td>{{event.eventType}}</td>
-                                <td>{{event.price | currency : 'TND'}}</td>
+                                <td>{{event.price | currency : 'TND': true}}</td>
                                 <td><img [src]="event.photo" width="50px" height="50px" alt=""></td>
                                 <td>
                                     <button type="button" class="btn btn-warning" data-toggle="modal"
