--- a/src/app/home/contact/contact.component.css
+++ b/src/app/home/contact/contact.component.css
@@ -1,24 +1,41 @@
+.contact{
+    width: 100%;
+    height: 100vh;
+    background: url("/assets/img/Background-image/home-bg.jpg") top center;
+    background-size: cover;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1;
+}
 .contact-container{
     display: flex;
     justify-content: center;
-    border: 1px solid red;
+    /* border: 1px solid red; */
+    opacity: 0.8;
+    box-shadow:1px 1px 80px rgba(255, 255, 255, 0.326)
 }
 .contact-us{
     width: 50%;
-    
-    border: 1px solid green;
+    border-radius: 10px;
+    /* border: 1px solid green; */
+    box-shadow:inset 1px 1px 80px rgba(255, 255, 255, 0.326);
 }
-.contact-form{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+.contact-form{   
     width: 50%;
-    border: 1px solid   yellow;
+    border-radius: 10px;
+    /* border: 1px solid   yellow; */
+    box-shadow:inset 1px 1px 80px rgb(255, 255, 255, 0.326);
 }
 #contact-text{ 
     height: 370px;
     width: 100%;
-    color: blue;
+    color: rgb(255, 255, 255);
     padding-top: 50px;
 }
 .contact-input {
@@ -43,16 +60,24 @@
     transition: 1s;
     transition-timing-function: ease-in-out;
 }
+
 .contact-btn {
     font-weight: bold;
-    color: blue;
-    background-color: rgb(255, 131, 152);
+    color: white;
+    background-color: #d83f87;
     border-radius: 5px;
     text-align:center;
-    border: 1px solid black; 
-    margin: 25px 100px;
+    border: 1px solid rgba(7, 44, 207, 0.616);
     text-decoration: none;
-    display: block;
+    padding: 10px 20px;
+    margin-top: 5px;
+   display: inline-block;
+   margin-left: 10px;
+   align-items: center;
+}
 
-
+.contact-btn:hover { 
+    background-color: #ec006e;
+    transition:0.3s;
+    padding: 10px 22px;
 }
