--- a/src/app/home/index/index.component.css
+++ b/src/app/home/index/index.component.css
@@ -4,16 +4,19 @@
     background: url("/assets/img/Background-image/home-bg.jpg") top center;
     background-size: cover;
     overflow: hidden;
-    position: relative;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1;
 }
 .about{
     width: 60%;
    display: flex;
-   
+ 
    justify-content: center;
    flex-direction: column;
    align-items: center;
