--- a/src/app/home/navbar/navbar.component.css
+++ b/src/app/home/navbar/navbar.component.css
@@ -8,7 +8,13 @@
     padding-bottom: 10px ;
     display: flex;
     justify-content: space-around;
-    background-color: #1b1922;
+    position: relative;
+    transition: 1s;
+    z-index: 2;
+}
+.nav-container:hover{ 
+    background: #1b1922;
+    transition: 1s;
 }
 .logo-img{
     padding: 5px;
@@ -34,9 +40,8 @@
 .links{
     padding: 7px 10px;
     margin-left: 5px;
-    border-bottom: solid 2px;
-    border-bottom-color: #1b1922 ;
     transition:  0.5s;
+    border-bottom: solid 2px;
     transition: all 0.3s ease-in-out 0s;
     display: block;margin: auto;
 
@@ -47,5 +52,6 @@
     font-weight: bold;
 }
 .links:hover{
+    border-bottom: solid 2px;
     border-bottom-color: red;
 }
