--- a/src/app/home/navbar/navbar.component.html
+++ b/src/app/home/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="nav-container container-fluid">
-      <a href="#" class="navbar-brand col-8"><img class="logo-img" src="assets/img/logo/logo.png" alt="The event"></a>
+      <a routerLink="index" class="navbar-brand col-8"><img class="logo-img" src="assets/img/logo/logo.png" alt="The event"></a>
       <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navCollapse"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
