--- a/src/app/views/company/company.component.html
+++ b/src/app/views/company/company.component.html
@@ -77,7 +77,7 @@
         </div>
         <div class="form-group row">
           <label>Photo :</label>
-          <input type="file" (change)="upload($event)" placeholder="Upload your compnay logo"
+          <input type="file" (change)="onSelectFile($event)" placeholder="Upload your compnay logo"
               accept="image/*"
               [ngClass]="{'is-invalid': submitted && companyForm.controls.photo.errors, 'is-valid': submitted && !companyForm.controls.photo.errors}">
           <div class="invalid-feedback d-block">
