--- a/src/app/views/company/company.component.html
+++ b/src/app/views/company/company.component.html
@@ -108,12 +108,11 @@
     </div>
   </div>
 </div>
-<main style="background-image: url('assets/img/Background-image/best-Event-Flyer-Templates.jpeg')">
 <div class="animated fadeIn">
   <div class="row">
     <div class="col-sm-12">
-      <div class="card" style="background:rgba(255, 255, 255, 0.37);">
-        <div class="card-header" style="background:rgba(255, 255, 255, 0.281);">
+      <div class="card">
+        <div class="card-header" >
           <strong>Company</strong>
           <small>Amalia Entertaiment & Events</small>
         </div>
@@ -125,7 +124,7 @@
               <!-- <input type="search" class="form-control col-3" placeholder="Search product by name"  [(ngModel)]="searchText"> -->
             </div>
           </div>
-          <table class="table table-striped table-hover" style="color: white" >
+          <table class="table table-striped table-hover"  >
             <thead>
               <tr>
                 <th scope="col">ID</th>
@@ -161,7 +160,7 @@
     </div>
   </div>
 </div>
-</main>
+
 
 
 
