--- a/src/app/views/company/company.component.html
+++ b/src/app/views/company/company.component.html
@@ -78,18 +78,17 @@
         <div class="form-group row">
           <label>Photo :</label>
           <input type="file" (change)="onSelectFile($event)" placeholder="Upload your compnay logo"
-              accept="image/*"
-              [ngClass]="{'is-invalid': submitted && companyForm.controls.photo.errors, 'is-valid': submitted && !companyForm.controls.photo.errors}">
-          <div class="invalid-feedback d-block">
+              accept="image/*">
+          <!-- <div class="invalid-feedback d-block">
               <div *ngIf="submitted && companyForm.controls.photo.hasError('required') && !file">
                   Photo is required.
               </div>
               <div *ngIf="submitted && companyForm.controls.photo.hasError('required') && file">
                   Photo format must be type image.
               </div>
-          </div>
-          <img *ngIf="companyForm.value.photo" [src]="companyForm.value.photo"
-              style="width: 50px; height :50px;">
+          </div> -->
+          <!-- <img *ngIf="companyForm.value.photo" [src]="companyForm.value.photo"
+              style="width: 50px; height :50px;"> -->
       </div>
         <!-- <div class="form-group row">
           <label for="uploadPhoto">Upload your compnay logo</label>
@@ -148,7 +147,7 @@
                   <button type="button" class="btn btn-warning" data-toggle="modal" (click)="showUpdate(company._id)" >
                     <i class="fa fa-edit"></i> Update
                   </button>
-                  <button type="button" class="btn btn-danger text-dark" (click)='deletecompany(company._id)'><i
+                  <button type="button" class="btn btn-danger text-dark" *ngIf="connectedCompanyId !== company._id" (click)='deletecompany(company._id)'><i
                       class="fa fa-trash"></i></button>
                 </td>
               </tr>
