--- a/src/app/home/navbar/navbar.component.html
+++ b/src/app/home/navbar/navbar.component.html
@@ -1,14 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-lg navbar-dark">
   <div class="nav-container container-fluid">
       <a routerLink="index" class="navbar-brand col-8"><img class="logo-img" src="assets/img/logo/logo.png" alt="The event"></a>
-      <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navCollapse"
+      <button type="button" class="navbar-toggler" style="border-radius: 3px;" data-bs-toggle="collapse" data-bs-target="#navCollapse"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon" style="fill:white!important;"></span>
       </button>
-      
       <div class="collapse navbar-collapse col-4" id="navCollapse">
         <ul class="nav-links navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="links"><a routerLink="index">Home</a></li>
+          <li class="links"><a routerLink="home">Home</a></li>
           <li class="links"><a routerLink="about">About</a></li>
           <li class="links"><a routerLink="events">Events</a></li>
           <li class="links"><a routerLink="contact">Contact</a></li>
