--- a/src/app/views/company/company.component.html
+++ b/src/app/views/company/company.component.html
@@ -119,7 +119,7 @@
           <table class="table table-striped table-hover">
             <thead>
               <tr>
-                <th scope="col">ID</th>
+                <th scope="col">#</th>
                 <th scope="col">Name</th>
                 <th scope="col">Logo</th>
                 <th scope="col">Description</th>
