--- a/src/app/views/events/events.component.html
+++ b/src/app/views/events/events.component.html
@@ -147,7 +147,7 @@
                     </div>
                     <fieldset class="form-group" *ngIf="tags.length">
                         <ng-select class="bootstrap" placeholder="Choose Tag for your Event" formControlName="tags"
-                            [options]="tags" [multiple]="true" (change)="addSelectedTag($event)">
+                            [options]="tags" [multiple]="true">
                         </ng-select>
                     </fieldset>
                 </div>
@@ -181,10 +181,8 @@
                                         [(ngModel)]="searchEvent">
                                 </div>
                             </div>
-                            <div class="col-2 float-right">
-                                <button class="btn btn-success" data-toggle="modal" (click)="showAdd()"><i
-                                        class="fa fa-plus"></i> Add event</button>
-                            </div>
+                            <button class="btn btn-success col-2 float-right" data-toggle="modal" (click)="showAdd()"><i
+                                    class="fa fa-plus"></i> Add event</button>
                         </div>
                     </div>
                     <table class="table table-striped table-hover">
