--- a/src/app/home/navbar/navbar.component.html
+++ b/src/app/home/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark">
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark">
   <div class="nav-container container-fluid">
       <a routerLink="index" class="navbar-brand col-8"><img class="logo-img" src="assets/img/logo/logo.png" alt="The event"></a>
       <button type="button" class="navbar-toggler" style="border-radius: 3px;" data-bs-toggle="collapse" data-bs-target="#navCollapse"
