--- a/src/app/home/events/card-event/card-event.component.css
+++ b/src/app/home/events/card-event/card-event.component.css
@@ -1,10 +1,32 @@
-.card-container{ 
-   width:200px ;
-   
-   background-color: rgba(1, 7, 7, 0.637);
+.cardd{
+    /* width: 100%; */
+    /* height: 100vh; */
+    background: url("/assets/img/Background-image/home-bg.jpg") top center;
+    background-size: cover;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1;
+}
+.card-container{
+    margin-top: 30px;
+    padding: 20px 20px; 
+    /* display: flex; */
+    /* justify-content: center; */
+    /* border: 1px solid red; */
+    opacity: 0.8;
+    /* box-shadow:1px 1px 80px rgba(255, 255, 255, 0.326) */
+}
+.card:hover {
+    transform: translatey(-5px) translatex(-5px) scale(1.05);
 }
 
-.card-image-container {
+/* .card-image-container {
     height: 200px;
     width: 200px;
     background-image: url("/assets/img/Background-image/home-bg.jpg");
@@ -21,4 +43,16 @@
     font-size: 10px;
     color : white;
     font-weight:bold;
+} */
+
+/* event Date Style */
+
+.event-date{
+
+    color: #f05537;
+}
+
+.card{
+    cursor: pointer;
+
 }
