--- a/src/app/home/events/events.component.html
+++ b/src/app/home/events/events.component.html
@@ -1,1 +1,3 @@
-<div class="event-component"><app-card-event></app-card-event></div>
+<div class="event-component">
+    <app-card-event></app-card-event>
+</div>
