--- a/src/app/home/events/card-event/card-event.component.css
+++ b/src/app/home/events/card-event/card-event.component.css
@@ -1,6 +1,4 @@
-.cardd{
-    /* width: 100%; */
-    /* height: 100vh; */
+.card-content {
     background: url("/assets/img/Background-image/home-bg.jpg") top center;
     background-size: cover;
     overflow: hidden;
@@ -13,46 +11,20 @@
     top: 0;
     z-index: 1;
 }
-.card-container{
-    margin-top: 30px;
+.card-container {
+    margin-top: 40px;
     padding: 20px 20px; 
-    /* display: flex; */
-    /* justify-content: center; */
-    /* border: 1px solid red; */
     opacity: 0.8;
-    /* box-shadow:1px 1px 80px rgba(255, 255, 255, 0.326) */
 }
 .card:hover {
     transform: translatey(-5px) translatex(-5px) scale(1.05);
 }
 
-/* .card-image-container {
-    height: 200px;
-    width: 200px;
-    background-image: url("/assets/img/Background-image/home-bg.jpg");
-    border: 1px solid green;
-    background-size: cover;
-}
-.card-text-container { 
-     border: 1px solid red;
-     height: 100px;
-}
-.card-Event-info-container{
-    
-    border  : 1px solid yellow;
-    font-size: 10px;
-    color : white;
-    font-weight:bold;
-} */
-
 /* event Date Style */
-
-.event-date{
-
+.event-date {
     color: #f05537;
 }
 
-.card{
+.card {
     cursor: pointer;
-
 }
