--- a/src/app/home/events/event-info/event-info.component.css
+++ b/src/app/home/events/event-info/event-info.component.css
@@ -1,6 +1,4 @@
-.reservation{
-    width: 100%;
-    height: 100vh;
+.reservation {
     background: url("/assets/img/Background-image/home-bg.jpg") top center;
     background-size: cover;
     overflow: hidden;
@@ -13,31 +11,31 @@
     top: 0;
     z-index: 1;
 }
-.reservation-container{
+.reservation-container {
     background-color: white;
-    width: 90%;
-    /* height:1500px; */
-    margin: 30px 90px;
+    margin: 80px 90px;
     border-radius: 5px 5px;
-   }
-   
-   /* .image-container{
-       height: 500px;
-       width: 100%;
-       background: url("/assets/img/Background-image/home-bg.jpg") no-repeat;
-       border: 1px solid green;
-       background-size: contain;
-   } */
-   
-   .event-name-container{
-       padding: 30px 30px;
-   
-   }
-   
-   .about-event-container{
-   
-   }
-   
-   .date-event-container{
-   
-   }
+}
+.event-type-container {
+    position: absolute;
+    bottom: 15px;
+    width: 50%;
+}  
+.event-details {
+    position: relative;
+}   
+.event-name-container {
+    padding: 30px 30px;
+}
+.about-event-container {
+    padding: 20px 40px;
+}
+.date-event-container {
+    padding: 20px 40px;
+}
+.ticket-event-container {
+    padding: 20px 40px;
+}
+.location-event-container {
+    padding: 20px 40px;
+}
