--- a/src/app/home/events/event-info/event-info.component.html
+++ b/src/app/home/events/event-info/event-info.component.html
@@ -4,7 +4,7 @@
             <div class="image-container col-8">
                 <img [src]="details?.photo" alt="photo" width="100%" height="100%">
             </div>
-            <div class="col-4">
+            <div class="event-details col-4">
                 <div class="event-name-container">
                     <div>{{details?.startDate | date :'MMMM'}}</div>
                     <div>{{details?.startDate | date : 'dd'}}</div>
@@ -15,6 +15,12 @@
                     </div>
 
                 </div>
+                <div class="event-type-container">
+                    <h5>
+                        {{details?.eventType}}
+                        <span *ngIf="details?.eventType == 'Paid'">: {{details?.price | currency: 'TND'}}</span>
+                    </h5>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -23,7 +29,7 @@
             </div>
             <div class="col-4"></div>
             <div class="col-4 float-right">
-                <button class="btn btn-success col-12" [routerLink]="['reservation']">Reservation</button>
+                <button class="btn btn-success col-11" [routerLink]="['reservation']">Reservation</button>
             </div>
             
         </div>
@@ -33,9 +39,22 @@
                 <h2>{{details?.eventName}}</h2>
                 <p>{{details?.eventDescription}}</p>
             </div>
-            <div class="date-event-container col-4">
-                <p>DATE</p>
+            <div class="col-4">
+                <div class="date-event-container">
+                    <h4>Date and Time :</h4>
+                    <p>from: {{details?.startDate | date: 'E, MMMM d, y,'}} {{details?.startTime | date: 'HH:mm'}}</p>
+                    <p>to: {{details?.endDate | date: 'E, MMMM d, y,'}} {{details?.endTime | date: 'HH:mm'}}</p>
+                </div>
+                <div class="ticket-event-container">
+                    <h4>Ticket Number :</h4>
+                    <p>{{details?.availableTicketNumber}}</p>
+                </div>
+                <div class="location-event-container">
+                    <h4>Location :</h4>
+                    <p>{{details?.location}}</p>
+                </div>
             </div>
+            
         </div>
         
     </div>
