--- a/src/app/views/company/company.component.html
+++ b/src/app/views/company/company.component.html
@@ -133,7 +133,9 @@
                 <td>{{i+1}}</td>
                 <td>{{ company.companyName }}</td>
                 <td><img [src]="company.photo" width="50px" height="50px" alt=""></td>
-                <td>{{ company.companyDescription }}</td>
+                <td>{{ company.companyDescription | slice:0:25 }}
+                  <span *ngIf="company.companyDescription.length > 100">...</span>
+                </td>
                 <td>{{ company.email }}</td>
                 <td>{{ company.role }}</td>
                 <td>
