--- a/src/app/views/events/events.component.html
+++ b/src/app/views/events/events.component.html
@@ -202,8 +202,10 @@
                             <tr class="" *ngFor="let event of listEvents | searchpipe:searchEvent ;let i=index">
                                 <td>{{i+1}}</td>
                                 <td>{{event.eventName}}</td>
-                                <td>{{event.eventDescription}}</td>
-                                <td>{{event.startDate | date: 'MMM d, y'}}</td>
+                                <td>{{event.eventDescription | slice:0:25}}
+                                    <span *ngIf="event.eventDescription.length > 100">...</span>
+                                </td>
+                                <td>{{event.startDate | date: 'MM/dd/y'}} ==> {{event.endDate | date: 'MM/dd/y'}}</td>
                                 <td>{{event.eventType}}</td>
                                 <td>{{event.price | currency : 'TND': true}}</td>
                                 <td><img [src]="event.photo" width="50px" height="50px" alt=""></td>
