--- a/src/app/home/events/reservation/reservation.component.css
+++ b/src/app/home/events/reservation/reservation.component.css
@@ -1,6 +1,6 @@
 .Reservation {
     width: 100%;
-    height: 100%;
+    min-height: 750px;
     background: url("/assets/img/Background-image/pexels-wendy-wei-1805895.jpg") top center;
     background-size: cover;
     overflow: hidden;
