update logo in home page

--- a/src/app/home/navbar/navbar.component.html
+++ b/src/app/home/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
   <div class="nav-container container-fluid">
-      <a routerLink="index" class="navbar-brand col-8"><img class="logo-img" src="assets/img/logo/logo.png" alt="The event"></a>
+      <a routerLink="index" class="navbar-brand col-8"><img class="logo-img" src="assets/img/brand/AMALIA.png" alt="Amalia"></a>
       <button type="button" class="navbar-toggler" style="border-radius: 3px;" data-bs-toggle="collapse" data-bs-target="#navCollapse"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon" style="fill:white!important;"></span>
