--- a/src/app/home/navbar/navbar.component.css
+++ b/src/app/home/navbar/navbar.component.css
@@ -20,14 +20,13 @@
     padding: 5px;
     margin-top:-10px;
     margin-left:3em;
-    width: 100px;
-    height: auto;
+    width: 200px;
+    height: 85px;
 }
 @media screen and (max-width: 768px) {
     .logo-img{
         padding: 5px;
-        width: 100px;
-        height: auto;
+        margin: auto 40%;
     }
 }
 .nav-links{
